# lastlint

./: .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  README.md  evan_latex_lint.py  lastlint.py  lastlint_lsp.py  otis_latex_lint.py  prek.toml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  prek.yml  release-please.yml
tests/: test_lint.py  test_lsp.py
tests/fixtures/: clean.tex  violations.tex
