[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otis-latex-lint"
version = "0.2.0"
description = "Linter for Evan Chen's LaTeX style guide"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "CJ Quines" }]

[project.scripts]
otis-latex-lint = "otis_latex_lint:main"

[dependency-groups]
dev = ["prek", "pytest"]

[tool.hatch.build.targets.wheel]
include = ["otis_latex_lint.py"]

[tool.hatch.build.targets.sdist]
include = ["otis_latex_lint.py", "README.md", "tests/"]
