[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lastlint"
version = "0.4.0"
description = "Linter for Evan Chen's LaTeX style guide"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "CJ Quines" }]

[project.scripts]
lastlint = "lastlint:main"

[dependency-groups]
dev = ["prek", "pytest"]

[tool.hatch.build.targets.wheel]
include = ["lastlint.py"]

[tool.hatch.build.targets.sdist]
include = ["lastlint.py", "README.md", "tests/"]
